feat: implement RuleBasedIssueLimiter for issue rate limiting
- Introduced RuleBasedIssueLimiter class to manage issue rate limiting based on defined rules.
- Added validation for rule definitions and ensured unique rule IDs during initialization.
- Implemented logic to acquire issue quotas based on applicable rules and context.
- Updated package-info.java to reference the new RuleBasedIssueLimiter.
- Modified InMemoryVerificationStore to return expiration time directly instead of StoreResult.
- Removed StoreResult class as it is no longer needed.
- Updated tests to accommodate changes in store method signature and to validate new RuleBasedIssueLimiter functionality.
- Refactored tests to use CompositeIssueContextManager instead of DefaultIssueContextManager.
- Ensured all tests pass with the new implementation and structure.